--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae eligendi eius ratione nisi ad blanditiis quasi itaque odit voluptatibus vero.</p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
